@@ -399,9 +399,21 @@ var
   new_obj: ISuperObject;
 begin
   Result := False;
-  new_obj := SO(str);
-  if new_obj <> nil then
-    Result := new_obj.IsType(stObject);
+  try
+    if str <> '' then
+    begin
+      new_obj := SO(str);
+      if new_obj <> nil then
+        Result := new_obj.IsType(stObject);
+    end
+    else
+      log('Error in jsonIsObject: Empty string is no JSON', LLerror);
+  except
+    on e: Exception do
+    begin
+      log('Exception in jsonIsObject: ' + e.message + ' with string: ' + str, LLerror);
+    end;
+  end;
 end;
 
 function jsonIsString(str: string): boolean;
@@ -596,11 +608,10 @@ begin
           stringToSet := '';
           Result := False;
         end;
-
     except
       on e: Exception do
       begin
-        //LogDatei.log('Exception in jsonAsObjectSetStringtypeValueByKey: ' +  e.message, LLerror);
+        log('Exception in jsonAsObjectSetStringtypeValueByKey: ' + e.message, LLerror);
       end;
     end;
   finally
